# OldSchoolTibia

./: .gitignore  CHANGELOG  README.md
tibiareplay/: .gitignore  CMakeLists.txt  TibiaReplay.sln  tibia_cmake
tibiareplay/TibiaReplayDll/: TibiaReplayDll.vcxproj  TibiaReplayDll.vcxproj.filters  packages.config  packet.h  replay_reader.cc  replay_reader.h  tibia_connection.cc  tibia_connection.h  tibia_replay_dll.cc
tibiareplay/TibiaReplayDll/network/: connection.cc  connection.h  server.h  ws2_32.cc  ws2_32.h
tibiareplay/TibiaReplayDll/utils/: console.cc  console.h  crc32.cc  crc32.h  fileutils.h  keystroke.cc  keystroke.h  obs.cc  obs.h  rsa.cc  rsa.h  xtea.cc  xtea.h
tibiareplay/TibiaReplayInjector/: TibiaReplayInjector.vcxproj  TibiaReplayInjector.vcxproj.filters  tibia_replay.cc
tibiareplay/src/tibia-replay/: tibia_replay.cc
tibiareplay/src/tibia-replay-dll/: packet.h  replay_reader.cc  replay_reader.h  tibia_connection.cc  tibia_replay_dll.cc
tibiareplay/src/tibia-replay-dll/network/: connection.h  server.h  ws2_32.cc
tibiareplay/src/tibia-replay-dll/utils/: console.cc  console.h  crc32.cc  fileutils.h  keystroke.cc  obs.cc  rsa.h  xtea.cc
tools/: .gitignore  TODO  convert.py  dat_reader.py  dump.py  find_duplicates.py  find_trade.py  get_item_types_with_extra_data.py  get_version.py  get_world.py  guess_version.py  guess_version_using_tibiarc.py  guess_world.py  index.py  init_tibiarc.sh  mongo.py  pyproject.toml  sort_recordings.py  tibiarc.py  tibiarc_helper.py  trp_to_sql.py  tstrings.py
tools/libs/: _cam.py  _common.py  _rec.py  _tmv.py  _trp.py  _ttm.py  packet.py  process.py  recording.py  utils.py
tools/oldschooltibia/: _cam.py  _common.py  _rec.py  _tmv.py  _trp.py  _ttm.py  _utils.py  recording.py  utils.py
web/: manage.py  replays.sql
web/api/: api.js  package-lock.json  package.json
web/app/: package-lock.json  package.json
web/app/src/: App.tsx  Home.tsx  Recordings.tsx  main.tsx
web/oldschooltibia/: asgi.py  settings.py  urls.py  wsgi.py
web/replays/: admin.py  models.py  urls.py  views.py
web/replays/migrations/: 0001_initial.py
web/replays/templates/: version.html  versions.html
youtube/: .gitignore  get_videos.py  replays_to_csv.sh
